CS-169 fix mobile-desktop columns and margin on mobile

--- a/src/pages/OrdersPages/OrdersPages.module.scss
+++ b/src/pages/OrdersPages/OrdersPages.module.scss
@@ -161,6 +161,7 @@
 
     &Text {
         font-weight: 400;
+        margin-left: 8px;
     }
 
     .btnPrimary {
@@ -209,7 +210,9 @@
 
     &Text {
         font-weight: 400;
+        margin-left: 8px;
     }
+
 
     .btnPrimary {
         width:     100%;
